# chatbot-asistente

./: .gitignore  README.md
mcp-client/: main.py  pyproject.toml
mcp-client/api/routes/: auth_routes.py  chat_routes.py
mcp-client/core/: config.py  mcp_client.py  mcp_client_backup.py  security.py
mcp-client/db/: mongodb.py  qdrant_client.py
mcp-client/db/models/: auth_requests.py  chats.py  google_tokens.py  slack_tokens.py  users.py
mcp-client/scripts/: clean.py
mcp-client/services/: qdrant_chat.py  rag_chat.py
mcp-client/utils/: google_calendar_auth.py  google_oauth.py  oauth_manager.py  slack_oauth.py
mcp-server/: main.py  pyproject.toml
mcp-server/core/: config.py  mcp.py
mcp-server/db/: mongodb.py
mcp-server/db/models/: event.py  user.py
mcp-server/models/: google_calendar_response.py
mcp-server/scripts/: generate_keys.py
mcp-server/tools/: google_calendar.py  slack.py
mcp-server/utils/: google_auth.py  google_calendar.py
